testsuite/tests/miscellaneous/anonymous_decl_diagnostic/test.out
test.ads:2:8: error: Anonymous type decl
2 |    X : array (1 .. 10) of Integer := (others => 0);
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^ 

