testsuite/tests/miscellaneous/anonymous_decl_diagnostic/test.ads
package Test is
   X : array (1 .. 10) of Integer := (others => 0);
end Test;
